[build-system]
requires = ["maturin>=1.0"]
build-backend = "maturin"

[project]
name = "altrios"
version = "0.2.1"
authors = [
    { name = "ALTRIOS Team", email = "altrios@nrel.gov" },
    { name = "Chad Baker, Lead Developer" },
    { name = "Nick Reinicke, Developer" },
    { name = "Matt Bruchon, Developer" },
    { name = "Saad Akhtar, Developer" },
    { name = "Steven Shi, Developer" },
    { name = "Jinghu Hu, Developer" },
    { name = "Grant Payne, Developer" },
    { name = "Jason Lustbader, PI" },
    { name = "Garrett Anderson, Developer" },
    { name = "Joel Allardyce, Developer" },
    { name = "Prativa Hartnett, Developer" },
    { name = "Steve Fritz, SwRI Lead" },
    { name = "Tyler Dick, Co-PI" },
]
description = "Tool for modeling and optimization of advanced locomotive powertrains for freight rail decarbonization."
readme = "README.md"
license = { file = "LICENSE.md" }
requires-python = ">=3.9, <3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: POSIX",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "pandas>=2",
    "numpy",
    "pymoo==0.6",
    "openpyxl",
    "xlrd",
    "seaborn",
    "matplotlib",
    "plotly",
    "typing_extensions",
    "pyyaml",
    "polars==0.18.7",
    "pyarrow",
    "requests",
]

[project.urls]
homepage = "https://www.nrel.gov/transportation/altrios.html"
source = "https://github.com/NREL/altrios"

[project.optional-dependencies]
dev = ["black", "pytest", "maturin", "ipykernel"]

[tool.maturin]
profile = "release"
python-source = "python"
features = ["pyo3/extension-module"]
module-name = "altrios.altrios_pyo3"
manifest-path = "rust/altrios-py/Cargo.toml"
include = [
    { format = "sdist", path = "rust/altrios-core/Cargo.toml" },
    { format = "sdist", path = "rust/altrios-core/src/*" },
    { format = "sdist", path = "rust/altrios-py/Cargo.toml" },
    { format = "sdist", path = "rust/altrios-py/src/*" },
    { format = "sdist", path = "rust/altrios-core/proc-macros/Cargo.toml" },
    { format = "sdist", path = "rust/altrios-core/proc-macros/src/*" },
]
