[workspace]

members = [
    "altrios-core", # pure rust core with optional pyo3 feature
    "altrios-core-py", # python module exposing altrios-core
]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[workspace.dependencies]
anyhow = "1.0.71"
pyo3 = "0.19"
pyo3-log = "*"
polars = {version = "0.30"}
polars-lazy = {version = "0.30"}
pyo3-polars = {version = "0.4.1"}
uom = { version = "0.35.0", features = ["use_serde"] }