[package]
name = "altrios-core-py"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
altrios-core = { path = "../altrios-core", features = ["pyo3"] }
pyo3 = { workspace = true, features = ["extension-module", "anyhow"] }
pyo3-log = { workspace = true}
polars = {version = "0.30.0"}
polars-lazy = {version = "0.30.0"}
pyo3-polars = {version = "0.4.1"}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "altrios_core_py"
crate-type = ["cdylib"]