[package]
name = "altrios-core"
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
version = "0.2.3"
description = "ALTRIOS Core model for train simulation"
readme = "README.md"

[dependencies]
csv = "1.1.6"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.23"
serde_json = "1.0"
uom = { workspace = true }
paste = "1.0.7"
easy-ext = "1.0.0"
altrios-proc-macros = { workspace = true }
argmin = "0.5.1"
rayon = "1.5.3"
bincode = "1.3.3"
log = { version = "0.4.17", optional = true }
document-features = { workspace = true }
anyhow = { workspace = true }
readonly = "0.2.3"
duplicate = "0.4.1"
nohash-hasher = "0.2.0"
polars = { workspace = true, features = [
    "dtype-categorical",
    "rank",
    "strings",
] }
polars-lazy = { workspace = true, features = [
    "dtype-categorical",
    "rank",
    "strings",
] }
pyo3-polars = { workspace = true, features = ["lazy"] }

# optional
pyo3 = { workspace = true, features = [
    "extension-module",
    "anyhow",
], optional = true }
serde-this-or-that = "0.4.2"
project-root = "0.2.2"
eng_fmt = { workspace = true }
directories = "5.0.1"
tempfile = "3.10.1"

[features]
## Exposes ALTRIOS structs, methods, and functions to Python.
pyo3 = ["dep:pyo3"]
## Enables logging messages that can be passed to Python if `pyo3` is also
## enabled.
logging = ["dep:log"]

[lints.rust]
# `'cfg(debug_advance_rewind)'` is expected for debugging in `advance_rewind.rs`
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(debug_advance_rewind)'] }
