[package]
name = "altrios-proc-macros"
authors = [
    "ALTRIOS Team <altrios@nrel.gov>",
    "Chad Baker, Lead Developer",
    "Nick Reinicke, Developer",
    "Matt Bruchon, Developer",
    "Jinghu Hu, Developer",
    "Grant Payne, Developer",
    "Jason Lustbader, PI",
    "Garrett Anderson, Developer",
    "Joel Allardyce, Developer",
    "Prativa Hartnett, Developer",
    "Steve Fritz, SwRI Lead",
    "Tyler Dick, Co-PI",
]
version = "0.1.2"
edition = "2021"
license = "BSD-3-Clause"
description = "ALTRIOS procedural macros"
homepage = "https://www.nrel.gov/transportation/altrios.html"
readme = "README.md"
repository = "https://github.com/NREL/altrios"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro-error = "1.0.4"
proc-macro2 = "1.0.37"
quote = "1.0.18"
regex = "1.6.0"
syn = { version = "1.0.92", features = ["full"] }
uom = { workspace = true }

[lib]
proc-macro = true
